crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_reports_missing_assets_directory.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: "normalize_output(&output, manifest_dir)"
---
:: core :: compile_error ! { "failed to collect available languages: Failed to read configuration file: failed to read directory `<manifest-dir>/missing`: No such file or directory (os error 2)" }
