crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_reports_missing_configuration.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: "normalize_output(&output, manifest_dir)"
---
:: core :: compile_error ! { "failed to read i18n configuration: i18n.toml configuration file not found" }
